--- a/help/cs/cs.po
+++ b/help/cs/cs.po
@@ -2,24 +2,25 @@
 # Copyright (C) 2011 banshee's COPYRIGHT HOLDER
 # This file is distributed under the same license as the banshee package.
 #
-# Marek Černocký <marek@manet.cz>, 2011, 2012.
+# Marek Černocký <marek@manet.cz>, 2011, 2012, 2013.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: banshee master\n"
-"POT-Creation-Date: 2012-02-09 05:55+0000\n"
-"PO-Revision-Date: 2012-03-26 09:54+0200\n"
+"Project-Id-Version: banshee banshee-2.6\n"
+"POT-Creation-Date: 2013-04-07 13:45+0000\n"
+"PO-Revision-Date: 2013-05-29 01:17+0200\n"
 "Last-Translator: Marek Černocký <marek@manet.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: cs\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Gtranslator 2.91.6\n"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
-#: C/ui.page:29(None) C/introduction.page:45(None)
+#: C/ui.page:29(None)
 msgid "@@image: 'figures/banshee.png'; md5=THIS FILE DOESN'T EXIST"
 msgstr "@@image: 'figures/banshee.png'; md5=THIS FILE DOESN'T EXIST"
 
@@ -32,7 +33,7 @@ msgstr "Přehled uživatelského rozhraní přehrávače <app>Banshee</app>."
 #: C/manage-tags.page:13(name) C/manage-playlists.page:13(name)
 #: C/manage-coverart.page:12(name) C/lastfm.page:12(name)
 #: C/keyboardshortcuts.page:10(name) C/introduction.page:12(name)
-#: C/index.page:9(name) C/import.page:11(name) C/extensions.page:11(name)
+#: C/index.page:10(name) C/import.page:11(name) C/extensions.page:11(name)
 #: C/amazon.page:12(name) C/advanced.page:11(name) C/add-radio.page:14(name)
 #: C/add-podcast.page:14(name)
 msgid "Paul Cutler"
@@ -43,7 +44,7 @@ msgstr "Paul Cutler"
 #: C/manage-tags.page:14(email) C/manage-playlists.page:14(email)
 #: C/manage-coverart.page:13(email) C/lastfm.page:13(email)
 #: C/keyboardshortcuts.page:11(email) C/introduction.page:13(email)
-#: C/index.page:10(email) C/import.page:12(email) C/extensions.page:12(email)
+#: C/index.page:11(email) C/import.page:12(email) C/extensions.page:12(email)
 #: C/amazon.page:13(email) C/advanced.page:12(email)
 #: C/add-radio.page:15(email) C/add-podcast.page:15(email)
 msgid "pcutler@gnome.org"
@@ -53,15 +54,15 @@ msgstr "pcutler@gnome.org"
 msgid "Introduction to the Banshee User Interface"
 msgstr "Úvod do uživatelského rozhraní Banshee"
 
-#: C/ui.page:27(title) C/introduction.page:43(title)
+#: C/ui.page:27(title)
 msgid "<gui>Banshee Media Player</gui> window"
 msgstr "Okno <gui>Multimediálního přehrávače Banshee</gui>"
 
-#: C/ui.page:28(app) C/introduction.page:44(app) C/index.page:21(title)
+#: C/ui.page:28(app) C/index.page:26(title)
 msgid "Banshee Media Player"
 msgstr "Multimediální přehrávač Banshee"
 
-#: C/ui.page:30(p) C/introduction.page:46(p)
+#: C/ui.page:30(p)
 msgid "<app>Banshee</app> library interface"
 msgstr "Rozhraní kolekce <app>Banshee</app>"
 
@@ -1332,8 +1333,8 @@ msgstr ""
 "čímž celou akci završíte."
 
 #: C/lastfm.page:58(title)
-msgid "Enable Last.fm Song Reporting"
-msgstr "Povolení oznamování skladeb z Last.fm"
+msgid "Enable Last.fm Song Reporting From Banshee"
+msgstr "Povolení oznamování skladeb Last.fm z Banshee"
 
 #: C/lastfm.page:59(p)
 msgid ""
@@ -1341,31 +1342,88 @@ msgid ""
 "ensure that you have enabled Banshee to report your songs. To enable Banshee "
 "to report the songs to your Last.fm profile go to Banshee's preferences, "
 "select the <gui>Source Specific</gui> tab, select <gui>Last.fm</gui> from "
-"the dropdown, and press the <gui>Enable Song Reporting</gui> checkbox. If "
-"you have an active internet connection Banshee will now send Last.fm "
-"information regarding the songs you play. To view your play history visit "
-"your profile on the Last.fm website. Last.fm will automatically update your "
-"music metadata if any of your artist, song title, or album information is "
-"incorrect (although we recommend that you use the Metadata Fixer extension "
-"to correct your files instead)."
+"the dropdown, and press the <gui>Enable Song Reporting From Banshee</gui> "
+"checkbox. If you have an active internet connection Banshee will now send "
+"Last.fm information regarding the songs you play. To view your play history "
+"visit your profile on the Last.fm website. Last.fm will automatically update "
+"your music metadata if any of your artist, song title, or album information "
+"is incorrect (although we recommend that you use the Metadata Fixer "
+"extension to correct your files instead)."
 msgstr ""
 "Když máte přehrávač Banshee úspěšně propojený s profilem Last.fm, ujistěte "
-"se, že jste v Banshee povolili oznamování svých skladeb.\n"
-"Pro oznamování skladeb do svého profilu Last.fm přejděte v předvolbách na "
-"kartu <gui>Dané zdrojem</gui>, v rozbalovacím seznamu vyberte <gui>Last.fm</"
-"gui> a zaškrtněte políčko <gui>Povolit oznamování skladeb</gui>. V případě, "
-"že máte aktivní internetové připojení, bude od teď přehrávač Banshee zasílat "
-"na Last.fm informace o skladbách, které přehráváte. Pokud si chcete historii "
-"přehrávání prohlédnout, navštivte svůj profil na webových stránkách Last.fm. "
-"Když bude některý umělec, název skladby nebo název alba nesprávný, Last.fm "
-"vaše hudební metadata automaticky aktualizuje (místo toho ale pro opravy "
-"souborů spíše doporučujeme rozšíření Opravář metadat)."
+"se, že jste v Banshee povolili oznamování svých skladeb. Pro oznamování "
+"skladeb do svého profilu Last.fm přejděte v předvolbách na kartu <gui style="
+"\"tab\">Dané zdrojem</gui>, v rozbalovacím seznamu vyberte <gui style="
+"\"menuitem\">Last.fm</gui> a zaškrtněte políčko <gui style=\"checkbox"
+"\">Povolit oznamování skladeb</gui>. V případě, že máte funkční internetové "
+"připojení, bude od teď přehrávač Banshee zasílat na Last.fm informace o "
+"skladbách, které přehráváte. Pokud si chcete historii přehrávání "
+"prohlédnout, navštivte svůj profil na webových stránkách Last.fm. Když bude "
+"některý umělec, název skladby nebo název alba nesprávný, Last.fm vaše "
+"hudební metadata automaticky aktualizuje (místo toho ale pro opravy souborů "
+"spíše doporučujeme rozšíření Opravář metadat)."
 
 #: C/lastfm.page:75(title)
+msgid "Enable Last.fm Song Reporting From Your Device"
+msgstr "Povolení oznamování skladeb Last.fm z vašeho zařízení"
+
+#: C/lastfm.page:76(p)
+msgid ""
+"After successfully linking Banshee to your Last.fm profile and enabling "
+"Banshee to report songs to Last.fm you can also enable scrobbling from a "
+"connected device. Banshee will, upon connection of your device, attempt to "
+"scrobble the songs you have played since the device was last connected and "
+"submit them to Last.fm."
+msgstr ""
+"Po úspěšném propojení Banshee s vaším profilem na Last.fm a po povolení "
+"Banshee oznamovat skladby na Last.fm, můžete povolit také sdílení seznamů "
+"skladeb (scrobbling) z připojených zařízení. Po připojení vašeho zařízení se "
+"Banshee pokusí zjistit, které skladby jste přehrávali od posledního "
+"připojení zařízení, a odešle je na Last.fm."
+
+#: C/lastfm.page:82(p)
+msgid ""
+"To enable scrobbling of a connected device go to Banshee's preferences, "
+"select the <gui>Source Specific</gui> tab, select <gui>Last.fm</gui> from "
+"the dropdown, and press the <gui>Enable Song Reporting From Device</gui> "
+"checkbox. If you have an active internet connection Banshee will, upon "
+"connection of your device, now attempt to gather information regarding the "
+"songs that you have played since it was last connected."
+msgstr ""
+"Jestli chcete sdílení seznamů skladeb z připojených zařízení zapnout, jděte "
+"do předvoleb Banshee, vyberte <gui>Dané zdrojem</gui>, v rozbalovacím "
+"seznamu vyberte <gui>Last.fm</gui> a zaškrtněte políčko <gui>Povolit "
+"oznamování skladeb ze zařízení</gui>. Pokud máte funkční internetové "
+"připojení, bude se Banshee po připojení vašeho zařízení pokoušet sesbírat "
+"informace týkající se skladeb, které jste přehrávali od doby, kdy bylo "
+"zařízení naposledy připojeno."
+
+#: C/lastfm.page:89(p)
+msgid ""
+"As with regular Banshee scrobbling submissions Last.fm will automatically "
+"update your music metadata if any of your artist, title, or album "
+"information is incorrect (although we again recommend that you use the "
+"Metadata Fixer extension to correct your files instead)."
+msgstr ""
+"Současně s pravidelným zasíláním seznamů skladem z Banshee na Last.fm se "
+"budou aktualizovat vaše hudbení metadata a to v situaci, kdy je údaj o "
+"umělci, názvu nebo albu uveden nesprávně (ačkoliv místo této funkce vám "
+"doporučujeme používat rozšíření Opravář metadat, které opravuje vaše "
+"soubory)."
+
+#: C/lastfm.page:94(p)
+msgid ""
+"Please note that currently Banshee only supports this feature with Apple "
+"products that are supported by the AppleDevice extension."
+msgstr ""
+"Vezměte prosím na vědomí, že v současnosti Banshee podporuje tuto funkci jen "
+"u produktů společnosti Apple, které jsou podporovány rozšířením AppleDevice."
+
+#: C/lastfm.page:101(title)
 msgid "Listen to Last.fm Radio"
 msgstr "Poslech rádia Last.fm"
 
-#: C/lastfm.page:76(p)
+#: C/lastfm.page:102(p)
 msgid ""
 "Last.fm radio is free for residents of the United States, United Kingdom and "
 "Germany. Residents of other countries will have to pay for a premium account "
@@ -1379,7 +1437,7 @@ msgstr ""
 "prémiovým funkcím: poslech seznamů skladeb a stanic hudby, kterou mají rádi "
 "nebo si ji označili."
 
-#: C/lastfm.page:83(p)
+#: C/lastfm.page:109(p)
 msgid ""
 "In Banshee's sources pane on the left hand side, you will now have a Last.fm "
 "section, including your Last.fm radio stations. You will need an active "
@@ -1611,29 +1669,33 @@ msgstr ""
 "Banshee podporuje populární zařízení včetně většiny přehrávačů MP3 iPod, "
 "Sandisk a Creative a telefonů se systémem Android."
 
-#: C/index.page:24(title)
+#: C/index.page:14(name)
+msgid "Sindhu S"
+msgstr "Sindhu S"
+
+#: C/index.page:15(email)
+msgid "sindhus@live.in"
+msgstr "sindhus@live.in"
+
+#: C/index.page:29(title)
 msgid "Add, Remove &amp; Play"
 msgstr "Přidávání, odebírání a přehrávání"
 
-#: C/index.page:28(title)
+#: C/index.page:33(title)
 msgid "Manage &amp; Sort"
 msgstr "Správa a řazení"
 
-#: C/index.page:32(title)
+#: C/index.page:37(title)
 msgid "Sync your media with a portable music player"
 msgstr "Synchronizace vašich médií s přenosnými hudebními přehrávači"
 
-#: C/index.page:36(title)
+#: C/index.page:41(title)
 msgid "Add additional functionality to Banshee"
 msgstr "Přidávání dalších funkcí do Banshee"
 
-#: C/index.page:40(title)
+#: C/index.page:45(title)
 msgid "Advanced options and help"
 msgstr "Pokročilé volby a nápověda"
-
-#: C/index.page:44(title)
-msgid "Common Problems"
-msgstr "Obvyklé problémy"
 
 #: C/import.page:8(desc)
 msgid "Add music and videos from your computer to your Banshee library."
